# fastapi-template-cli

./: README.md  pyproject.toml
fastapi_minimal_cli.egg-info/: PKG-INFO  SOURCES.txt
fastapi_template/: cli.py  pyproject.toml
fastapi_template_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
