[project]
name = "fastapi-minimal-cli"
version = "0.1.0"
description = "A CLI tool for quickstarting FastAPI projects"
authors = [{ name = "Aaron Philip", email = "aaronphilip2003@gmail.com"}]
readme = "README.md"
dependencies = ["click"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
create-fastapi-app = "fastapi_template.cli:main"

[tool.setuptools.package-data]
"fastapi_template" = ["templates/**/*"]

